--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.dawes.PreparacionApplication</mainClass>
+				</configuration>				
 			</plugin>
 		</plugins>
 	</build>
