--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,13 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:mysql://3.21.41.163/blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.url=jdbc:mysql://3.138.112.254/blog?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=maria
 spring.datasource.password=maria
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 server.tomcat.uri-encoding=UTF-8
+server.error.whitelabel.enabled=false
