--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		 <start-class>com.dawes.PreparacionApplication</start-class>
+		
 		<java.version>1.8</java.version>
 	</properties>
 
@@ -73,6 +75,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
 	</dependencies>
 
 	<build>
